<resources>
    <string name="app_name">Flixt</string>
    <string name="title_activity_main_features">MainFeaturesActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="label_genre">Genre</string>
    <string name="label_duration">Duration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="ui_avatars_url">https://ui-avatars.com/api/?background=random&amp;length=1&amp;bold=true&amp;name=%s&amp;size=400&amp;background=1C1C3D&amp;color=FFFFFF</string>

    <string name="label_release_and_genre">%1$s • %2$s</string>
    <string name="label_rating_count_vote">⭐ %1$.1f (%2$d)</string>
    <string name="label_title_movie">%s</string>
    <string name="label_rating_movie">%.1f</string>
    <string name="label_total_vote">(%d)</string>
    <string name="label_number_rating">%.1f</string>
    <string name="label_buy_ticket">IDR %dK</string>
    <string name="label_price">Rp%d</string>
    <string name="label_total_price">Total Price: Rp%d</string>
    <string name="label_total_items">%d Items</string>
    <string name="label_now_playing">Now Playing</string>
    <string name="label_search_any_film">Search any film</string>
    <string name="label_see_all">See All</string>
    <string name="label_coming_soon_playing">Coming Soon</string>
    <string name="label_indicator">Indicator</string>
    <string name="label_icon_profile">Icon Profile</string>
    <string name="label_release_date">Release</string>
    <string name="label_age">+17</string>
    <string name="label_code_language">EN</string>
    <string name="label_review">Review</string>
    <string name="label_watch_trailer">Watch Trailer</string>
    <string name="label_movie_genre">Movie genre:</string>
    <string name="label_adult_movie">Adult Movie:</string>
    <string name="label_language">Language:</string>
    <string name="example_description">During World War II, Lt. Gen. Leslie Groves Jr. appoints physicist J. Robert Oppenheimer to work on the top-secret Manhattan Project. Oppenheimer and a team of scientists spend years developing and See More..</string>
    <string name="label_directors">Directors</string>
    <string name="label_actors">Actors</string>
    <string name="example_buy_ticket">Buy Ticket</string>
    <string name="example_footage">footage</string>
    <string name="label_soon">SOON</string>
    <string name="label_location_cinema">%1$s, %2$s</string>
    <string name="label_time_watch">Time:</string>
    <string name="label_date">Date:</string>
    <string name="label_cinema">Cinema:</string>
    <string name="label_month_year_date_selection">%1$s-%2$s</string>
    <string name="label_watchlist">Watchlist</string>
    <string name="label_delete_confirmation">Delete Confirmation</string>
    <string name="label_message_confirmation_delete">Are you sure you want to delete this data? This action cannot be undone.</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_show_or_scan_code">Show or Scan this code</string>
    <string name="label_ticket">My Tickets</string>
    <string name="label_date_and_time_watch_movie">%1$s, %2$s</string>
    <string name="label_amount_have_ticket">%d, Tickets</string>
    <string name="label_cinema_and_studio">%1$s, %2$s</string>
    <string name="label_row_and_number_seats">Row %1$s (%2$s)</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_cinema_movie">Cinema Movie</string>
    <string name="label_payment">Payment</string>
    <string name="label_profile">Profile</string>
    <string name="label_time">Time</string>
    <string name="label_cost">Cost</string>
    <string name="label_seats">Seats</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="label_or">or</string>
    <string name="label_your_email">Your Email</string>
    <string name="label_your_username">Your Username</string>
    <string name="label_your_password">Your Password</string>
    <string name="label_welcome_to_flixt">Welcome To Flixt</string>
    <string name="label_let_s_sign_you_in">Let\'s Sign You In!</string>
    <string name="label_login_to_your_account">Login to Your Account</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_sign_in">Sign in</string>
    <string name="label_sign_out">Sign out</string>


</resources>