<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_popular_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            >

            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/RoundedSquare"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/iv_poster_now_playing"
                android:layout_width="match_parent"
                android:layout_height="302dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/iv_sample_poster_horizontal" />
            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/label_title_movie"
                android:textAlignment="center"
                android:textSize="22sp"
                android:fontFamily="@font/sf_pro_text_bold"
                android:textColor="@color/md_text_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster_now_playing" />

            <TextView
                android:id="@+id/tv_release_date_and_genre_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="@string/label_release_and_genre"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/md_text_secondary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieTitle" />

            <TextView
                android:id="@+id/movieRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="@string/label_rating_count_vote"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColor="@color/md_text_secondary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date_and_genre_movie" />

        </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>
