<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_upcoming_movie"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginBottom="24dp"
    app:cardCornerRadius="24dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_poster"
        android:layout_width="158dp"
        android:layout_height="223dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_poster_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/iv_sample_poster" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="14sp"
        android:textColor="@color/md_theme_primary_secondary"
        android:fontFamily="@font/sf_pro_text_bold"
        tools:text="@string/label_title_movie"
        app:layout_constraintEnd_toEndOf="@id/cardview_poster"
        app:layout_constraintStart_toStartOf="@id/cardview_poster"
        app:layout_constraintTop_toBottomOf="@id/cardview_poster" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_video"
        app:layout_constraintStart_toStartOf="@id/tv_title_movie"
        app:layout_constraintTop_toBottomOf="@id/tv_title_movie" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/label_genre"
        android:textSize="11sp"
        android:layout_marginStart="4dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:fontFamily="@font/sf_pro_text_regular"
        android:textColor="@color/md_text_secondary"
        android:id="@+id/tv_genre"
        app:layout_constraintBottom_toBottomOf="@id/iv_genre"
        app:layout_constraintEnd_toEndOf="@id/tv_title_movie"
        app:layout_constraintStart_toEndOf="@id/iv_genre"
        app:layout_constraintTop_toTopOf="@id/iv_genre" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_release_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="@id/iv_genre"
        app:layout_constraintTop_toBottomOf="@id/iv_genre" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/label_release_date"
        android:textSize="11sp"
        android:layout_marginStart="4dp"
        android:id="@+id/tv_release_movie"
        android:maxLines="1"
        android:fontFamily="@font/sf_pro_text_regular"
        android:textColor="@color/md_text_secondary"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="@id/iv_release_movie"
        app:layout_constraintEnd_toEndOf="@id/tv_genre"
        app:layout_constraintStart_toEndOf="@id/iv_release_movie"
        app:layout_constraintTop_toTopOf="@id/iv_release_movie" />
</androidx.constraintlayout.widget.ConstraintLayout>