<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.schedule.ScheduleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="241dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/iv_sample_poster_horizontal" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:src="@drawable/ic_back_bullet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="80dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/btn_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/iv_bg_schedule_detail_movie"
                android:paddingHorizontal="14dp"
                android:paddingVertical="25dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="115dp"
                    android:layout_height="0dp"
                    android:padding="0dp"
                    app:shapeAppearanceOverlay="@style/RoundedSquare2"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/label_movie_language"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/iv_sample_poster" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_title_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:maxLines="2"
                    android:textColor="@color/md_text_primary"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_poster"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Venom: The Last Dance" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_rate_age"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_corner_radius_blue"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:paddingHorizontal="4dp"
                    android:paddingVertical="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/md_theme_onPrimary"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/tv_title_movie"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_movie"
                    tools:text="@string/label_age" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_label_code_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/bg_corner_radius_white"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:letterSpacing="0.2"
                    android:minWidth="35dp"
                    android:paddingHorizontal="4dp"
                    android:paddingVertical="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/md_theme_primary"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_rate_age"
                    app:layout_constraintStart_toEndOf="@id/tv_rate_age"
                    app:layout_constraintTop_toTopOf="@id/tv_rate_age"
                    tools:text="@string/label_code_language" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_movie_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:text="@string/label_movie_genre"
                    android:textColor="@color/md_text_secondary"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/tv_title_movie"
                    app:layout_constraintTop_toBottomOf="@id/tv_rate_age" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_movie_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:textColor="@color/md_text_primary"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/label_movie_genre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_movie_genre"
                    app:layout_constraintTop_toTopOf="@id/label_movie_genre" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_adult_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:text="@string/label_adult_movie"
                    android:textColor="@color/md_text_secondary"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/label_movie_genre"
                    app:layout_constraintTop_toBottomOf="@id/label_movie_genre" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_adult_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:textColor="@color/md_text_primary"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/label_adult_category"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_movie_genre"
                    app:layout_constraintTop_toTopOf="@id/label_adult_category" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_movie_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:text="@string/label_language"
                    android:textColor="@color/md_text_secondary"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/label_adult_category"
                    app:layout_constraintTop_toBottomOf="@id/label_adult_category" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_movie_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:textColor="@color/md_text_primary"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/label_movie_language"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_adult_category"
                    app:layout_constraintTop_toTopOf="@id/label_movie_language" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/divider_one"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginTop="24dp"
            android:background="@color/md_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_detail_movie" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_month_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:paddingVertical="8dp"
            android:textAlignment="center"
            android:textColor="@color/md_text_primary"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/divider_one"
            tools:text="@string/label_month_year_date_selection" />

        <com.michalsvec.singlerowcalendar.calendar.SingleRowCalendar
            android:id="@+id/date_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            app:deselection="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_month_year"
            app:longPress="false"
            app:multiSelection="false" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cinema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_selection"
            tools:listitem="@layout/item_cinema_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
