<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="12dp"
    app:cardBackgroundColor="#FAFAFA"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_poster_shimmer"
            android:layout_width="86dp"
            android:layout_height="122dp"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="6dp"
            android:background="@color/md_theme_secondary"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedSquare2" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_barcode"
            android:layout_width="26dp"
            android:layout_height="102dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="4dp"
            android:background="@color/md_theme_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_one"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/dashed_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_barcode"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/tv_duration_shimmer"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/md_theme_secondary"
            app:layout_constraintBottom_toTopOf="@id/tv_title_movie"
            app:layout_constraintEnd_toStartOf="@id/divider_one"
            app:layout_constraintStart_toEndOf="@id/iv_poster_shimmer"
            app:layout_constraintTop_toTopOf="@id/iv_poster_shimmer" />

        <View
            android:background="@color/md_theme_secondary"
            android:id="@+id/tv_title_movie"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toTopOf="@id/iv_location_cinema"
            app:layout_constraintEnd_toEndOf="@+id/tv_duration_shimmer"
            app:layout_constraintStart_toEndOf="@id/iv_poster_shimmer"
            app:layout_constraintTop_toBottomOf="@id/tv_duration_shimmer" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_location_cinema"
            android:layout_width="11dp"
            android:layout_height="11dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_theme_secondary"
            app:layout_constraintBottom_toTopOf="@id/iv_date_and_time_watch"
            app:layout_constraintStart_toStartOf="@id/tv_title_movie"
            app:layout_constraintTop_toBottomOf="@id/tv_title_movie" />


        <View
            android:id="@+id/tv_location_cinema"
            android:layout_width="0dp"
            android:layout_height="14dp"
            android:layout_marginStart="8dp"
            android:background="@color/md_theme_secondary"
            app:layout_constraintBottom_toBottomOf="@id/iv_location_cinema"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_movie"
            app:layout_constraintStart_toEndOf="@id/iv_location_cinema"
            app:layout_constraintTop_toTopOf="@id/iv_location_cinema"
            tools:text="@string/label_location_cinema" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_date_and_time_watch"
            android:layout_width="11dp"
            android:layout_height="11dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_theme_secondary"
            app:layout_constraintBottom_toTopOf="@id/iv_tickets"
            app:layout_constraintStart_toStartOf="@id/iv_location_cinema"
            app:layout_constraintTop_toBottomOf="@id/iv_location_cinema" />


        <View
            android:id="@+id/tv_date_and_time_watch"
            android:layout_width="0dp"
            android:layout_height="14dp"
            android:background="@color/md_theme_secondary"
            app:layout_constraintBottom_toBottomOf="@id/iv_date_and_time_watch"
            app:layout_constraintEnd_toEndOf="@+id/tv_location_cinema"
            app:layout_constraintStart_toStartOf="@id/tv_location_cinema"
            app:layout_constraintTop_toTopOf="@id/iv_date_and_time_watch"
            tools:text="@string/label_date_and_time_watch_movie" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_tickets"
            android:layout_width="11dp"
            android:layout_height="11dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_theme_secondary"
            app:layout_constraintBottom_toBottomOf="@id/iv_poster_shimmer"
            app:layout_constraintStart_toStartOf="@id/iv_date_and_time_watch"
            app:layout_constraintTop_toBottomOf="@id/iv_date_and_time_watch" />


        <View
            android:id="@+id/tv_tickets"
            android:layout_width="0dp"
            android:layout_height="14dp"
            android:background="@color/md_theme_secondary"
            app:layout_constraintBottom_toBottomOf="@id/iv_tickets"
            app:layout_constraintEnd_toEndOf="@+id/tv_date_and_time_watch"
            app:layout_constraintStart_toStartOf="@id/tv_date_and_time_watch"
            app:layout_constraintTop_toTopOf="@id/iv_tickets"
            tools:text="@string/label_amount_have_ticket" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

    <!--

    <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_label_genre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/sf_pro_text_regular"
    android:text="@string/label_genre"
    app:layout_constraintVertical_chainStyle="spread_inside"
    android:textAlignment="center"
    android:textColor="@color/md_text_secondary"
    android:textSize="14sp"

    app:layout_constraintBottom_toTopOf="@id/tv_label_duration"
    app:layout_constraintTop_toBottomOf="@id/iv_starts"
    app:layout_constraintStart_toStartOf="@id/iv_starts"
    android:layout_marginTop="20dp"
        />

    <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_genre"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="20dp"
    android:ellipsize="end"
    android:fontFamily="@font/sf_pro_text_bold"
    android:maxLines="1"
    tools:text="@string/label_genre"
    android:textColor="@color/md_text_primary"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="@id/tv_label_genre"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/tv_label_genre"
    app:layout_constraintTop_toTopOf="@id/tv_label_genre" />

    <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_label_duration"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/sf_pro_text_regular"
    android:text="@string/label_duration"
    android:textAlignment="center"
    android:textColor="@color/md_text_secondary"
    android:textSize="14sp"
    app:layout_constraintBottom_toTopOf="@+id/tv_label_release_date"
    app:layout_constraintStart_toStartOf="@id/tv_label_genre"
    app:layout_constraintTop_toBottomOf="@id/tv_label_genre" />

    <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_duration"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:ellipsize="end"
    android:fontFamily="@font/sf_pro_text_bold"
    android:maxLines="1"
    tools:text="@string/label_duration"
    android:textColor="@color/md_text_primary"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="@id/tv_label_duration"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@id/tv_genre"
    app:layout_constraintTop_toTopOf="@id/tv_label_duration" />

    <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_label_release_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/sf_pro_text_regular"
    android:text="@string/label_release_date"
    android:textAlignment="center"
    android:textColor="@color/md_text_secondary"
    android:textSize="14sp"
    app:layout_constraintTop_toBottomOf="@id/tv_label_duration"
    app:layout_constraintBottom_toBottomOf="@id/iv_poster"
    app:layout_constraintStart_toStartOf="@id/tv_label_duration"
        />

    <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_release_date"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:ellipsize="end"
    android:fontFamily="@font/sf_pro_text_bold"
    android:maxLines="1"
    tools:text="@string/label_genre"
    android:textColor="@color/md_text_primary"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="@id/tv_label_release_date"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@id/tv_duration"
    app:layout_constraintTop_toTopOf="@id/tv_label_release_date"
        />

    -->
